--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/library-api
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql= true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql= false
+spring.jpa.hibernate.ddl-auto=none
+
